fix: Zoom banner z-index

--- a/src/app/shared/zoom-app-banner/zoom-app-banner.component.scss
+++ b/src/app/shared/zoom-app-banner/zoom-app-banner.component.scss
@@ -5,7 +5,7 @@
   transition: transform 150ms ease-in-out, opacity 150ms ease-in-out;
   transform-origin: bottom right;
   width: 400px;
-  z-index: 5;
+  z-index: 12;
   font-size: 0.9rem;
   border: none;
   border-radius: 16px;
